[metadata]
name=sphinx_qt_documentation
version=0.1
description=Plugin for proper resolve intersphinx references for Qt elements
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
author = Grzegorz Bokota
author_email = bokota@gmail.com
url = https://github.com/Czaki/sphinx-qt-documentation
license = GPLv3
keywords = Sphinx, Qt, PyQt5, PySide2 
platforms = Linux, Windows, MacOs
python_requires='>=3'
install_requires=
    sphinx
    qtpy
    docutils