[metadata]
name=sphinx_qt_documentation
version=0.2
description=Plugin for proper resolve intersphinx references for Qt elements
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License 
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
author = Grzegorz Bokota
author_email = bokota@gmail.com
url = https://github.com/Czaki/sphinx-qt-documentation
license = BSD-3-Clause
keywords = Sphinx, Qt, PyQt5, PySide2 
platforms = Linux, Windows, MacOs


[options]
python_requires= >=3.6
install_requires=
    sphinx
    docutils
