[metadata]
name = sphinx_qt_documentation
version = 0.4
description = Plugin for proper resolve intersphinx references for Qt elements
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Czaki/sphinx-qt-documentation
author = Grzegorz Bokota
author_email = bokota@gmail.com
license = BSD-3-Clause
license_file = LICENSE.txt
platforms = Linux, Windows, MacOs
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
keywords = Sphinx, Qt, PyQt5, PySide2, PyQt5, PySide6

[options]
packages = find:
install_requires =
    docutils
    sphinx
python_requires = >=3.6
setup_requires =
    setuptools>=36.0
tests_require =
    pytest
    pytest-cov

[options.extras_require]
dev =
    pre-commit
lint =
    black
    flake8
    pylint
test =
    pytest>=3.0.0
    pytest-cov

[flake8]
max-line-length = 120

[pylint.FORMAT]
max-line-length = 120

[isort]
profile = black
